# sim_fiducial

./: CMakeLists.txt  README.md  package.xml
launch/: sample_launch.py
models/aruco_6x6_marker_00/: model.config  model.sdf
models/aruco_6x6_marker_01/: model.config  model.sdf
models/aruco_6x6_marker_02/: model.config  model.sdf
models/aruco_6x6_marker_03/: model.config  model.sdf
models/aruco_6x6_marker_04/: model.config  model.sdf
models/aruco_6x6_marker_05/: model.config  model.sdf
models/aruco_6x6_marker_06/: model.config  model.sdf
models/aruco_6x6_marker_07/: model.config  model.sdf
models/aruco_6x6_marker_08/: model.config  model.sdf
models/aruco_6x6_marker_09/: model.config  model.sdf
models/aruco_6x6_marker_10/: model.config  model.sdf
models/aruco_6x6_marker_11/: model.config  model.sdf
models/aruco_6x6_marker_12/: model.config  model.sdf
models/aruco_6x6_marker_13/: model.config  model.sdf
models/aruco_6x6_marker_14/: model.config  model.sdf
models/aruco_6x6_marker_15/: model.config  model.sdf
models/aruco_6x6_marker_16/: model.config  model.sdf
models/aruco_6x6_marker_17/: model.config  model.sdf
models/aruco_6x6_marker_18/: model.config  model.sdf
models/aruco_6x6_marker_19/: model.config  model.sdf
models/aruco_6x6_marker_20/: model.config  model.sdf
models/aruco_6x6_marker_21/: model.config  model.sdf
models/aruco_6x6_marker_22/: model.config  model.sdf
models/aruco_6x6_marker_23/: model.config  model.sdf
models/aruco_6x6_marker_24/: model.config  model.sdf
models/aruco_6x6_marker_25/: model.config  model.sdf
models/aruco_6x6_marker_26/: model.config  model.sdf
models/aruco_6x6_marker_27/: model.config  model.sdf
models/aruco_6x6_marker_28/: model.config  model.sdf
models/aruco_6x6_marker_29/: model.config  model.sdf
models/aruco_6x6_marker_30/: model.config  model.sdf
models/aruco_6x6_marker_31/: model.config  model.sdf
models/aruco_6x6_marker_32/: model.config  model.sdf
models/aruco_6x6_marker_33/: model.config  model.sdf
models/aruco_6x6_marker_34/: model.config  model.sdf
models/aruco_6x6_marker_35/: model.config  model.sdf
models/aruco_6x6_marker_36/: model.config  model.sdf
models/aruco_6x6_marker_37/: model.config  model.sdf
models/aruco_6x6_marker_38/: model.config  model.sdf
models/aruco_6x6_marker_39/: model.config  model.sdf
sdf/: down_camera.sdf  elemental_camera.sdf  forward_camera.sdf
src/: elemental_camera_plugin.cpp  motion_plugin.cpp
worlds/: box_of_markers.world  box_of_markers_map.yaml  build_world.py  charuco_12x9_aruco_5x5_target.world  circle_of_markers.world  circle_of_markers_map.yaml  dense_circle_of_markers.world  dense_circle_of_markers_map.yaml  eight_planes_of_four_markers.world  eight_planes_of_four_markers_map.yaml  one_marker.world  one_marker_map.yaml  three_circles_of_markers.world  three_circles_of_markers_map.yaml  three_dense_circles_of_markers.world  three_dense_circles_of_markers_map.yaml  yz_plane_of_markers.world  yz_plane_of_markers_map.yaml
(+115 files in other folders)
